--- a/configs/am335x_bbb_defconfig
+++ b/configs/am335x_bbb_defconfig
@@ -10,6 +10,7 @@ CONFIG_SYS_CONSOLE_INFO_QUIET=y
 CONFIG_VERSION_VARIABLE=y
 CONFIG_ARCH_MISC_INIT=y
 CONFIG_SPL=y
+CONFIG_SPL_CPU_SUPPORT=y
 # CONFIG_SPL_ENV_SUPPORT is not set
 CONFIG_SPL_OS_BOOT=y
 # CONFIG_SPL_YMODEM_SUPPORT is not set
