--- a/configs/am335x_bbb_defconfig
+++ b/configs/am335x_bbb_defconfig
@@ -11,6 +11,7 @@ CONFIG_VERSION_VARIABLE=y
 CONFIG_ARCH_MISC_INIT=y
 CONFIG_SPL=y
 CONFIG_SPL_CPU_SUPPORT=y
+CONFIG_SPL_DMA_SUPPORT=y
 # CONFIG_SPL_ENV_SUPPORT is not set
 CONFIG_SPL_OS_BOOT=y
 # CONFIG_SPL_YMODEM_SUPPORT is not set
@@ -31,6 +32,7 @@ CONFIG_CMD_SPL=y
 # CONFIG_DOS_PARTITION is not set
 # CONFIG_ISO_PARTITION is not set
 # CONFIG_SPL_EFI_PARTITION is not set
+CONFIG_DMA=y
 CONFIG_MMC_OMAP_HS=y
 CONFIG_PHYLIB=y
 CONFIG_PHY_MSCC=y
